[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/GameUI.gd" type="Script" id=1]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CooldownPanel" type="VBoxContainer" parent="."]
margin_left = 17.0
margin_top = 16.0
margin_right = 152.0
margin_bottom = 73.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostCooldownText" type="Label" parent="CooldownPanel"]
margin_top = 12.0
margin_right = 135.0
margin_bottom = 26.0
text = "Boost: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecallCooldownText" type="Label" parent="CooldownPanel"]
margin_top = 30.0
margin_right = 135.0
margin_bottom = 44.0
text = "Recall: "
__meta__ = {
"_edit_use_anchors_": false
}
